--- a/src/main/webapp/visuals/profile.css
+++ b/src/main/webapp/visuals/profile.css
@@ -1,3 +1,10 @@
-body{
-    color: white;
+body {
+    background: url("Wand.png") no-repeat center fixed ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.fancy-text {
+    font-family: 'Courgette', cursive;
 }
