--- a/src/main/webapp/visuals/homepage.css
+++ b/src/main/webapp/visuals/homepage.css
@@ -7,6 +7,5 @@ body {
 }
 
 .text-center {
-    font-family: "Papyrus", "Copperplate", monospace;
-    font-weight: bolder;
+    font-family: 'Courgette', cursive;
 }
